# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("vfat-defaults") {
  cflags = [
    "-O2",
    "-g",
    "-Wall",
    "-Werror",
    "-D_BSD_SOURCE",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DELFTC_NEED_BYTEORDER_EXTENSIONS",
    "-Wno-unused-variable",
    "-Wno-unused-const-variable",
    "-Wno-format",
    "-Wno-sign-compare",
    "-Wno-implicit-function-declaration",
    "-Wno-return-type",
    "-Wno-implicit-int",
  ]
  include_dirs = []
}

###################################################
##Build fsck_msdos
ohos_executable("fsck_msdos") {
  configs = [ ":vfat-defaults" ]
  sources = [
    "boot.c",
    "check.c",
    "dir.c",
    "fat.c",
    "main.c",
  ]

  include_dirs = [
    ".",
    "//third_party/FreeBSD/sys",
  ]

  deps = []
  subsystem_name = "storage"
  part_name = "storage_standard"
}
